# subnetting-sim

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: index.html
src/subnetcalc/: __init__.py  cli.py  core.py  exceptions.py  export.py  limits.py  sanitize.py  subnets.py  supernet.py  verify.py  vlsm.py
src/subnetcalc/web/: __init__.py  app.py
src/subnetcalc/web/static/: app.js  style.css
src/subnetcalc/web/templates/: base.html  index.html  result.html
tests/: test_cli.py  test_core.py  test_export.py  test_limits.py  test_sanitize.py  test_subnets.py  test_supernet.py  test_verify.py  test_vlsm.py  test_web.py
